[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/LoggedIn.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LoginResultContainer" type="VBoxContainer" parent="VBoxContainer"]
visible = false
offset_right = 1024.0
offset_bottom = 192.0

[node name="AccountPlayerId" type="HBoxContainer" parent="VBoxContainer/LoginResultContainer"]
offset_right = 1024.0
offset_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/LoginResultContainer/AccountPlayerId"]
offset_top = 5.0
offset_right = 263.0
offset_bottom = 19.0
text = "login_result.PlayFabId (Account Player Id)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Edit" type="LineEdit" parent="VBoxContainer/LoginResultContainer/AccountPlayerId"]
offset_left = 267.0
offset_right = 1024.0
offset_bottom = 24.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitlePlayerId" type="HBoxContainer" parent="VBoxContainer/LoginResultContainer"]
offset_top = 28.0
offset_right = 1024.0
offset_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/LoginResultContainer/TitlePlayerId"]
offset_top = 5.0
offset_right = 566.0
offset_bottom = 19.0
text = "login_result.InfoResultPayload.AccountInfo.TitleInfo.TitlePlayerAccount.Id(Title Player Id)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Edit" type="LineEdit" parent="VBoxContainer/LoginResultContainer/TitlePlayerId"]
offset_left = 570.0
offset_right = 1024.0
offset_bottom = 24.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitlePlayerName" type="HBoxContainer" parent="VBoxContainer/LoginResultContainer"]
offset_top = 56.0
offset_right = 1024.0
offset_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/LoginResultContainer/TitlePlayerName"]
offset_top = 5.0
offset_right = 544.0
offset_bottom = 19.0
text = "login_result.InfoResultPayload.AccountInfo.TitleInfo.DisplayName (Title Player Name)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Edit" type="LineEdit" parent="VBoxContainer/LoginResultContainer/TitlePlayerName"]
offset_left = 548.0
offset_right = 1024.0
offset_bottom = 24.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SessionTicket" type="HBoxContainer" parent="VBoxContainer/LoginResultContainer"]
offset_top = 84.0
offset_right = 1024.0
offset_bottom = 108.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/LoginResultContainer/SessionTicket"]
offset_top = 5.0
offset_right = 165.0
offset_bottom = 19.0
text = "login_result.SessionTicket"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Edit" type="LineEdit" parent="VBoxContainer/LoginResultContainer/SessionTicket"]
offset_left = 169.0
offset_right = 1024.0
offset_bottom = 24.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EntityToken" type="HBoxContainer" parent="VBoxContainer/LoginResultContainer"]
offset_top = 112.0
offset_right = 1024.0
offset_bottom = 136.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/LoginResultContainer/EntityToken"]
offset_top = 5.0
offset_right = 230.0
offset_bottom = 19.0
text = "login_result.EntityToken.EntityToken"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Edit" type="LineEdit" parent="VBoxContainer/LoginResultContainer/EntityToken"]
offset_left = 234.0
offset_right = 1024.0
offset_bottom = 24.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EntityType" type="HBoxContainer" parent="VBoxContainer/LoginResultContainer"]
offset_top = 140.0
offset_right = 1024.0
offset_bottom = 164.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/LoginResultContainer/EntityType"]
offset_top = 5.0
offset_right = 226.0
offset_bottom = 19.0
text = "login_result.EntityToken.Entity.Type"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Edit" type="LineEdit" parent="VBoxContainer/LoginResultContainer/EntityType"]
offset_left = 230.0
offset_right = 1024.0
offset_bottom = 24.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EntityId" type="HBoxContainer" parent="VBoxContainer/LoginResultContainer"]
offset_top = 168.0
offset_right = 1024.0
offset_bottom = 192.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/LoginResultContainer/EntityId"]
offset_top = 5.0
offset_right = 209.0
offset_bottom = 19.0
text = "login_result.EntityToken.Entity.Id"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Edit" type="LineEdit" parent="VBoxContainer/LoginResultContainer/EntityId"]
offset_left = 213.0
offset_right = 1024.0
offset_bottom = 24.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GetTitleDataButton" type="Button" parent="VBoxContainer"]
offset_right = 1024.0
offset_bottom = 20.0
text = "Get Title Data"

[node name="EventsPlayStream" type="Button" parent="VBoxContainer"]
offset_top = 24.0
offset_right = 1024.0
offset_bottom = 44.0
text = "Events & PlayStream API"

[node name="RequestBuilder" type="Button" parent="VBoxContainer"]
offset_top = 48.0
offset_right = 1024.0
offset_bottom = 68.0
text = "Request Builder"

[node name="Response" type="RichTextLabel" parent="VBoxContainer"]
offset_top = 72.0
offset_right = 1024.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
offset_top = 542.0
offset_right = 1024.0
offset_bottom = 569.0
text = "Back to Main Menu"

[node name="LogoutButton" type="Button" parent="VBoxContainer"]
offset_top = 573.0
offset_right = 1024.0
offset_bottom = 600.0
text = "Logout"

[connection signal="pressed" from="VBoxContainer/GetTitleDataButton" to="." method="_on_GetTitleDataButton_pressed"]
[connection signal="pressed" from="VBoxContainer/EventsPlayStream" to="." method="_on_EventsPlayStream_pressed"]
[connection signal="pressed" from="VBoxContainer/RequestBuilder" to="." method="_on_RequestBuilder_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="VBoxContainer/LogoutButton" to="." method="_on_LogoutButton_pressed"]
